--- a/app/globals.css
+++ b/app/globals.css
@@ -62,3 +62,7 @@ input, select, textarea, option,.basic-single {
   background-position: center;
   height: 95vh;
 }
+
+.leaflet-container {
+  z-index: 0 !important;
+}
